# sandbox-rust

./: .env  Cargo.toml  README.md  list.txt  test.txt
acts/actors/: Cargo.toml
acts/actors/ask/: Cargo.toml
acts/actors/ask/src/: main.rs
acts/actors/ask/templates/: index.html  user.html
acts/actors/async2/: Cargo.toml
acts/actors/async2/src/: main.rs
acts/actors/async_db/: Cargo.toml  weather.db
acts/actors/async_db/db/: sqlite_db.sh
acts/actors/async_db/src/: main.rs
acts/actors/base/: Cargo.toml
acts/actors/base/src/: main.rs
acts/actors/base/static/: 404.html  welcome.html
acts/actors/deez/: Cargo.toml  test.db
acts/actors/deez/migrations/create_users/: down.sql
acts/actors/deez/src/: actions.rs  main.rs  models.rs
acts/actors/diemysql/: .env  Cargo.toml
acts/actors/diemysql/migrations/2020-04-17-102655_create_snippets/: down.sql  up.sql
acts/actors/diemysql/src/: lib.rs  models.rs  notes.txt  schema.rs
acts/actors/diestart/: .env  Cargo.toml  notes.txt
acts/actors/diestart/migrations/2020-04-17-063015_create_posts/: up.sql
acts/actors/diestart/src/: lib.rs  models.rs
acts/actors/error_handling/: Cargo.toml
acts/actors/error_handling/src/: main.rs
acts/actors/isotope/: Cargo.toml
acts/actors/isotope/src/: main.rs
acts/actors/isotope/src/config/: config.env  config.rs
acts/actors/isotope/src/middlewares/: auth.rs
acts/actors/isotope/src/models/: user.rs
acts/actors/isotope/src/repositories/user_repository/: routes.rs  user_repository.rs
acts/actors/pg/: .env  Cargo.toml
acts/actors/pg/src/: main.rs
acts/actors/sane/: .env  Cargo.toml  notes.txt
acts/actors/sane/migrations/2020-04-18-190743_users/: up.sql
acts/actors/sane/migrations/2020-04-18-190755_invitations/: up.sql
acts/actors/sane/src/: auth_handler.rs  email_service.rs  errors.rs  invitation_handler.rs  main.rs  register_handler.rs  utils.rs
acts/actors/sane/static/: index.html  main.css  main.js  register.html
acts/actors/tiktok/: Cargo.toml
acts/actors/tiktok/src/: game.rs  main.rs
acts/actors/todo/: .env  Cargo.toml
acts/actors/todo/migrations/2020-04-22-095411_create_tasks/: down.sql  up.sql
acts/actors/todo/src/: api.rs  db.rs  main.rs  model.rs
acts/actors/todo/static/errors/: 400.html  404.html  500.html
acts/actors/todo/templates/: head.html.tera  index.html.tera
acts/actors/webs/: Cargo.toml
acts/actors/webs/src/: main.rs
acts/actors/webs/static/: websocket.html
acts/basic/: Cargo.toml
acts/basic/src/: main.rs
altsrc/: tdir.rs  tline.rs  tprint.rs
examples/: generictrait.rs  typegen.rs
from/: Cargo.toml
src/: async-dir.rs  async-hello.rs  async-line.rs  async-log.rs  bot.rs  by_generics.rs  echo.rs  fib.rs  gen.rs  main.rs  stds.rs  toks.rs  we_have_time.rs
tokio-exm/: thello.rs  tprint.rs
