[package]
name = "sandbox"
version = "0.1.0"
authors = ["sachin maharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
telegram-bot = "0.7.0"
tokio-core = "0.1.17"
futures = "0.1.23"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "time"
path = "src/we_have_time.rs"

[[bin]]
name = "fib"
path = "src/fib.rs"

[[bin]]
name = "bot"
path = "src/bot.rs"