[package]
name = "sandbox"
version = "0.1.0"
authors = ["sachin maharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
telegram-bot = "0.7.0"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
femme = "1.3.0"
log = "0.4.8"
surf = "2.0.0-alpha.0"
attohttpc = "0.12.0" 
anyhow = "*"
reqwest =  { version = "0.10.4", features = ["json"] }

[dependencies.async-std]
version = "1.5.0"
features = ["attributes","unstable"]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "time"
path = "src/we_have_time.rs"

[[bin]]
name = "fib"
path = "src/fib.rs"

[[bin]]
name = "bot"
path = "src/bot.rs"
[[bin]]
name = "gen"
path = "src/gen.rs"

[[bin]]
name = "by_generics"
path = "src/by_generics.rs"

[[bin]]
name = "toks"
path = "src/toks.rs"

[[bin]]
name = "echo"
path = "src/echo.rs"
[[bin]]
name = "five"
path = "src/five.rs"


[[bin]]
name = "stds"
path = "src/stds.rs"

[[bin]]
name = "ahello"
path = "src/async-hello.rs"

[[bin]]
name = "aline"
path = "src/async-line.rs"

[[bin]]
name = "adir"
path = "src/async-dir.rs"

[[bin]]
name = "alog"
path = "src/async-log.rs"


[[bin]]
name = "thello"
path = "tokio-exm/thello.rs"

[[bin]]
name = "tline"
path = "tokio-exm/tline.rs"
[[bin]]
name = "tdir"
path = "tokio-exm/tdir.rs"
[[bin]]
name = "tprint"
path = "tokio-exm/tprint.rs"
