[package]
name = "basic"
version = "0.1.0"
authors = ["sachin maharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
log = "0.4.0"
env_logger = "0.7.1"
actix-http = "2.0.0-alpha.2"
awc = "2.0.0-alpha.1"
