[package]
name = "async_db"
version = "0.1.0"
authors = ["sachin maharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"

env_logger = "0.7.1"

r2d2 = "0.8.2"
r2d2_sqlite = "0.14"

futures = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.7"
rusqlite = "0.21"
