[package]
name = "isotope"
version = "0.1.0"
authors = ["sachin maharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
serde = "1.0.106"
serde_json = "1.0.48"
lazy_static = "1.4.0"
mongodb = "0.9.2"
envfile = "0.2.1"
bson = "0.14.0"
rust-crypto = "0.2.36"
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.7.1"
chrono = "0.4.11"
jsonwebtoken = "7.1.0"
futures = "0.3.4"