[package]
name = "todo"
version = "0.1.0"
authors = ["sachin maharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-rt = "1.0.0"
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3.1"
log = "0.4.3"
serde = { version = "1.0.69", features = ["derive"] }
serde_json = "1.0.22"
tera = "1.0"

[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "1.4.4"