[package]
name = "webs"
version = "0.1.0"
authors = ["sachin maharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.7.1"
actix-files = "0.2.1"
actix-web-actors = "2.0.0" 